kubernetes/apps/media/base/bazarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      nodeSelector:
        stack.arr: "arr-1"
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: bazarr
          image: linuxserver/bazarr:1.6.2@sha256:c1673816321156b904af9b7e6415ea547ae9622e4acc375358f1e1eb9ed1e904
          ports:
            - containerPort: 6767
              name: http
          resources:
            requests:
              memory: 128Mi
              cpu: 50m
            limits:
              memory: "512Mi"
              cpu: "500m"
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /mnt/media/videos
              subPath: videos

      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: bazarr-pvc
        - name: media
          persistentVolumeClaim:
            claimName: media-pvc
